--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp": "^3.9.1",
     "gulp-concat": "^2.4.3",
     "gulp-plumber": "^0.6.6",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-typescript": "^2.12.1",
     "gulp-uglify": "^1.1.0",
     "typescript": "^1.8.9",
